--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -143,6 +143,7 @@
         height: fit-content;
         width: fit-content;
         min-width: 100%;
+        min-height: var(--timelineHeight);
         flex-shrink: 0;
 
         border-bottom: 1px solid black;
@@ -260,6 +261,10 @@
 
     .monthText {
         text-anchor: middle;
+    }
+
+    #svg-tl{
+padding-right: 20px;
     }
 
     /* ------- CHART ------- */
