--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -141,12 +141,13 @@
 
     .div-content-header {
         height: fit-content;
-        width: fit-content;
+        width: 100%;
         min-width: 100%;
         min-height: var(--timelineHeight);
         flex-shrink: 0;
 
         border-bottom: 1px solid black;
+        overflow-x: scroll;
     }
 
     .div-content-body {
@@ -177,7 +178,7 @@
 
     #div-timeline {
         max-width: 100%;
-        overflow-x: scroll;
+
     }
 
     #div-timeline::-webkit-scrollbar {
@@ -192,13 +193,21 @@
     }
 
     #table-activityHeader {
-        width: 25%;
+        width: fit-content;
         color: #bbbbbb;
     }
 
     th {
         height: var(--timelineHeight);
-        padding: 0;
+        padding: 0px 5px 0px 5px;
+        text-align: center;
+        width: auto;
+        color:black;
+    }
+
+    .td-name{
+        min-width: none;
+        width:auto;
     }
 
     tr {
@@ -213,8 +222,6 @@
         white-space: nowrap;
         overflow: hidden;
     }
-
-    .td-name {}
 
     .indent0 {
         padding-left: 0px;
@@ -263,8 +270,8 @@
         text-anchor: middle;
     }
 
-    #svg-tl{
-padding-right: 20px;
+    #svg-tl {
+        padding-right: 20px;
     }
 
     /* ------- CHART ------- */
@@ -309,7 +316,11 @@ padding-right: 20px;
     }
 
     #div-activityTable::-webkit-scrollbar {
-        width: 10px;
+        width: 0px;
+    }
+
+    .div-content-header::-webkit-scrollbar{
+        height: 0px;
     }
 
     /* ------- DEBUG ------- */
