--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -8,8 +8,7 @@
 
         //the horizontal portion of the container that should be 
         //taken up by the gantt chart
-        --chartPortionPct: 75%; //for flex
-        --chartPortionFr: 75fr; //for grid
+        --chartPortionPct: 65%; //for flex
 
         --tbh-blue-background: rgb(35, 45, 64);
         --tbh-blue1: rgb(25, 128, 143);
@@ -131,7 +130,7 @@
     // #div-content -> #div-activities
     //div that contains the activities table
     #div-activities {
-        width: 25%;
+        width: 35%;
         flex-shrink: 0;
         height: 100%;
 
@@ -277,9 +276,7 @@
     /* ------- CHART ------- */
 
     .activityBar {
-
-        //fill: red;
-        stroke: black;
+        stroke: gray;
         stroke-width: 1px;
     }
 
