indent 5 and leaf formatting

--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -207,6 +207,7 @@
     .td-name{
         min-width: none;
         width:auto;
+        font-weight: bold;
     }
 
     tr {
@@ -242,6 +243,13 @@
         padding-left: 100px;
     }
 
+    .indent5{
+        padding-left: 125px;
+    }
+
+    .leaf{
+        font-weight: normal;
+    }
 
     /* #table-ganttGrid{
 
