--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -204,7 +204,7 @@
         color:black;
     }
 
-    .td-name{
+    .col-name{
         min-width: none;
         width:auto;
         font-weight: bold;
